@@ -1,0 +1,8 @@
+[Desktop Entry]
+_Name=GHex
+_Comment=Gnome Hexadecimal Editor
+Exec=ghex2
+Terminal=0
+Type=Application
+Icon=gnome-ghex.png
+Categories=Application;Utility;GhexEditor
