@@ -1,3 +1,9 @@
+2002-03-06  Shivram U  <shivaram.upadhyayula@wipro.com>
+	* Makefile.am : Added desktop rule to install the ghex.desktop file
+	and the gnome-ghex.png icon.
+	* Added ghex.desktop.in file to the repository.
+	* src/print.c, src/ui.c : print functionality changes.
+
 2002-03-05  Shivram U  <shivaram.upadhyayula@wipro.com>
 	* src/preferences.c : Fix for #71467 and #71468.
 	* src/print.c : Enabled print preview functionality.
